Solved issue with overlay not aligning correctly
On larger screens images would no longer span the entire width of the
screen, while the overlay did. This caused a weird looking overlay that
didn't align properly with the underlying image.

--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -2,6 +2,7 @@
 
 .main {
   margin: 95px $outer-margin $outer-margin $sidebar-width;
+  text-align: center;
 }
 
 @media (max-width: $phone-breakpoint) {
