--- a/src/components/ProjectSlideshow.module.scss
+++ b/src/components/ProjectSlideshow.module.scss
@@ -51,6 +51,7 @@
   flex-grow: 1;
   font-size: 1.3em;
   text-decoration: none;
+  text-align: left;
   cursor: pointer;
 
   &:hover {
