--- a/src/components/SinglePhoto.module.scss
+++ b/src/components/SinglePhoto.module.scss
@@ -20,6 +20,8 @@
 
 .container {
   position: relative;
+  display: inline-block;
+  line-height: 0;
   cursor: pointer;
 
   .title {
